# sdoconv

./: CMakeLists.txt  Doxyfile.in  README.md
src/: CMakeLists.txt  Escape.cpp  Escape.hpp  GamsGenerator.cpp  GamsGenerator.hpp  Main.cpp  SetIndex.hpp
